# trailbase

./: CHANGELOG.md  Cargo.toml
crates/cli/src/: args.rs
crates/client/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: app_state.rs  config.rs  connection.rs  lib.rs  logging.rs  scheduler.rs  schema_metadata.rs  transaction_recorder.rs
crates/core/src/admin/: query.rs
crates/core/src/admin/logs/: stats.rs
crates/core/src/admin/rows/: delete_rows.rs  insert_row.rs  list_rows.rs  read_files.rs  update_row.rs
crates/core/src/admin/table/: list_tables.rs  mod.rs
crates/core/src/auth/: cli.rs  error.rs
crates/core/src/records/: record_api.rs  transaction.rs  validate.rs  write_queries.rs
crates/core/src/records/subscribe/: handler.rs  manager.rs
crates/core/src/server/: init.rs
crates/reactive/: Cargo.toml
crates/reactive/src/: async_reactive.rs  lib.rs  reactive.rs
crates/refinery/src/drivers/: trailbase.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: connection.rs  error.rs  generic.rs  lib.rs  rows.rs  tests.rs  traits.rs
crates/sqlite/src/pg/: executor.rs  mod.rs  sync.rs  util.rs  value.rs
crates/sqlite/src/sqlite/: batch.rs  connection.rs  executor.rs  mod.rs  sync.rs  transaction.rs  util.rs
crates/wasm-runtime-guest/: Cargo.toml
crates/wasm-runtime-host/: Cargo.toml
crates/wasm-runtime-host/src/: sqlite.rs
