[package]
name = "trailbase-reactive"
version = "0.1.0"
edition = "2024"
license = "OSL-3.0"
description = "Reactive data structure for TrailBase based on https://crates.io/crates/reactivate"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../../README.md"

[dependencies]
futures-util = { workspace = true }
parking_lot = { workspace = true }
paste = "1"
tokio = { workspace = true }
