[package]
name = "trailbase-wasm-runtime-host"
version = "0.1.0"
edition = "2024"
license = "OSL-3.0"
description = "WASM runtime for the TrailBase framework"
homepage = "https://trailbase.io"
exclude = [
  "**/node_modules/",
  "**/dist/",
]

[lib]
doctest = false

[dependencies]
bytes = "1.10.1"
futures-util = { workspace = true }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
log = { version = "^0.4.21", default-features = false }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
self_cell = "1.2.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlite3-parser = { workspace = true }
thiserror = "2.0.14"
trailbase-schema = { workspace = true }
trailbase-sqlvalue = { workspace = true, features = ["rusqlite"] }
trailbase-sqlite = { workspace = true }
trailbase-wasm-common = { workspace = true }
trailbase-wasi-keyvalue = { workspace = true }
tokio = { version = "^1.38.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wasmtime-wasi-io = { workspace = true }
